# adk-agent-sample

./: .env.example  README.md  pyproject.toml
assets/: ADK-company-researcher.html  adk-web-example-20250821.html  example-result.md
assets/reports/: investment_research_report_20250821_153030.md
src/agents/company_search/: __init__.py  agent.py
src/agents/financial_modeling/: __init__.py  agent.py  csv_template_handler.py  csv_template_tools.py
src/agents/financial_modeling/database/: company_profile_template.csv  financial_statements_template.csv  nvidia_company_profile.csv  nvidia_financial_statements.csv
src/agents/fomc_research/: agent.py  root_agent_prompt.py
src/agents/fomc_research/sub_agents/: retrieve_meeting_data_agent.py  retrieve_meeting_data_agent_prompt.py
src/agents/fomc_research/tools/: file_utils.py
src/host/: __init__.py  agent.py  pdf_report_tool.py  prompt.py
src/reports/: investment_research_report_20250821_161130.md
