[project]
name = "financial-research-agent"
version = "0.1.0"
description = "Financial research multiagent system based on google-ADK"
authors = [{name = "Jaehun Shon"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.11.0",
    "python-dotenv==1.1.1",
    "absl-py==2.2.1",
    "diff-match-patch==20241021",
    "google-cloud-bigquery>=3.30.0",
    "google-genai>=1.21.1",
    "pdfplumber==0.11.5",
    "pydantic>=2.11.1",
    "requests>=2.32.0",
    "tabulate==0.9.0",
    "scikit-learn==1.6.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.95.1",
    "pandas>=2.3.1",
    "openpyxl>=3.1.5",
    "reportlab>=4.4.3"
]
